--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     gap: 32px;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .main_header {
@@ -222,3 +223,4 @@ label{
     width: 100%;
     height: 24px;
 }
+
