--- a/style.css
+++ b/style.css
@@ -7,38 +7,49 @@ html {
 }
 
 body {
-    background: white;
+    background: #F9F9F9;
     color: #002A48;
     margin: 0;
     box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
 }
 
 .container {
-    max-width: 1282px;
+    background: #F9F9F9;
     display: flex;
     flex-direction: row;
-    gap: 40px;
-    padding: 0px 0px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 32px 40px 32px 0;
+}
+
+.left_side {
+    flex: 0 0 121px;
+    max-width: 121px;
+    padding: 159px 27px;
+    box-sizing: border-box;
 }
 
 .main {
-    padding: 32px 40px;
-    gap: 32px;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    gap: 32px;
+    box-sizing: border-box;
 }
 
 .main_header {
-    gap: 551px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .tex-box {
     display: flex;
     flex-direction: column;
-    align-content: space-between;
     gap: 12px;
 }
 
@@ -90,10 +101,11 @@ body {
 .profile_img {
     width: 100%;
     height: 100px;
+    object-fit: cover;
 }
 
 .profile_text {
-    padding: 32px 32px 71px 32px;
+    padding: 32px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -104,6 +116,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 16px;
 }
 
 .profile_name_user {
@@ -138,60 +152,69 @@ body {
     border: none;
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 
-.profile_infor{
+.profile_infor {
     display: flex;
     flex-direction: row;
     gap: 32px;
 }
-.form_right, .form_left {
+
+.form_right,
+.form_left {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    height: 314px;
     width: 50%;
 }
-label{
+
+label {
     font-size: 16px;
     font-weight: 400;
     color: #000000;
     opacity: 80%;
 }
-.input-box{
+
+.input-box {
     display: flex;
     flex-direction: row;
-    padding: 14px 0px;
+    padding: 14px 16px;
     font-size: 16px;
     font-weight: 400;
     color: #000000;
-    opacity: 40%; 
+    opacity: 40%;
     justify-content: space-between;
     background-color: #F9F9F9;
-    height:52px;   
+    height: 52px;
+    border-radius: 8px;
+    box-sizing: border-box;
 }
-.input-box img{
+
+.input-box img {
     width: 24px;
     height: 24px;
 }
-.email_address{
+
+.email_address {
     font-size: 18px;
     font-weight: 500;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     gap: 26px;
 }
-.email_address_email{
+
+.email_address_email {
     display: flex;
     flex-direction: row;
     gap: 30px;
-
 }
-.email_address_email img{   
+
+.email_address_email img {
     width: 48px;
     height: 48px;
 }
+
 .email_address_change {
     display: flex;
     justify-content: center;
@@ -204,23 +227,19 @@ label{
     box-sizing: border-box;
     border: 0;
     background-color: hsla(219, 94%, 62%, 0.1);
-    color: #4182f9;;
-}
-.left_side {
-    padding: 159px 27px 540px 27px;
-    height: 1024px;
+    color: #4182f9;
+    cursor: pointer;
 }
 
 .left_side_navigation nav {
     display: flex;
     flex-direction: column;
-    height: 325px;
-    width: 24px;
+    align-items: center;
+    height: auto;
     gap: 47px;
 }
 
 .left_side_navigation_img {
-    width: 100%;
+    width: 24px;
     height: 24px;
 }
-
