--- a/style.css
+++ b/style.css
@@ -11,25 +11,28 @@ body {
     color: #002A48;
     margin: 0;
     box-sizing: border-box;
-    width: 100vw;
     height: 100vh;
+    display: flex;
 }
 
 .container {
-    background: #F9F9F9;
+    flex: 1;
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 100%;
+    padding: 32px 40px;
     box-sizing: border-box;
-    padding: 32px 40px 32px 0;
+    background: #F9F9F9;
 }
 
 .left_side {
     flex: 0 0 121px;
     max-width: 121px;
+    background-color: #FFFFFF;
     padding: 159px 27px;
     box-sizing: border-box;
+    height: 100%;
 }
 
 .main {
@@ -38,6 +41,7 @@ body {
     flex-direction: column;
     gap: 32px;
     box-sizing: border-box;
+    padding-left: 40px;
 }
 
 .main_header {
@@ -231,15 +235,24 @@ label {
     cursor: pointer;
 }
 
-.left_side_navigation nav {
+.nagvigation {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: auto;
     gap: 47px;
 }
 
-.left_side_navigation_img {
+.icons {
+    height: 58px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icons .blue {
+    background: linear-gradient(270deg, #d8e6ff -30%, #edf3ff 100%);
+}
+
+.icons img {
     width: 24px;
     height: 24px;
 }
