--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html {
+html, body {
+    margin: 0;
     color: #333333;
     font-size: 24px;
     font-family: "Poppins", sans-serif;
@@ -6,73 +7,67 @@ html {
     line-height: 100%;
 }
 
-body {
-    background: #F9F9F9;
-    color: #002A48;
-    margin: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    display: flex;
-}
-
 .container {
-    flex: 1;
     display: flex;
+    height: 100%;
     flex-direction: row;
-    width: 100%;
-    height: 100%;
-    padding: 32px 40px;
-    box-sizing: border-box;
-    background: #F9F9F9;
+    gap: 40px;
+    background-color: #F9F9F9;
 }
-
 .left_side {
-    flex: 0 0 121px;
-    max-width: 121px;
+    max-width: 78px;
     background-color: #FFFFFF;
-    padding: 159px 27px;
-    box-sizing: border-box;
-    height: 100%;
+    padding: 159px 27px 540px 27px  ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
 }
-
-.main {
-    flex: 1;
+.left_navigation{
+    display: flex;
+    flex-direction: column;
+    gap: 47px;
+}
+.left_navigation img{
+    height: 24px;
+    width: 24px;
+}
+.main{
+    flex-grow: 1;
+    padding-right: 40px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: flex;
     flex-direction: column;
     gap: 32px;
-    box-sizing: border-box;
-    padding-left: 40px;
 }
-
-.main_header {
+.main_header{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-right: 40px;
+    width: 100%;
 }
-
-.tex-box {
+.text_box{
+    font-style: medium;
+    font-weight: 500;
+    font-size: 24px;
+    color: #3E435D;
     display: flex;
     flex-direction: column;
     gap: 12px;
-}
 
-.main_header__content {
-    font-size: 24px;
-    font-weight: 500;
 }
-
-.main_header_small__content {
-    font-size: 16px;
+.text_box small{
+    font-style: light;
     font-weight: 400;
+    font-size: 16px;
+    color: #ADA7A7;
 }
-
-.search-nofi-box {
+.nofi_search_box{
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
+    gap: 32px;
 }
 
 .search {
@@ -82,6 +77,10 @@ body {
     border-radius: 8px;
     gap: 16px;
     background-color: #FFFFFF;
+    height: 52px;
+    gap: 16px;
+    padding-left: 20px;
+    max-width: 354px;
 }
 
 .search input {
@@ -89,97 +88,104 @@ body {
     font-size: 16px;
     height: 24px;
 }
-
-.avatar img {
-    width: 52px;
+.nofi{
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 52px;
+    width: 52px;
+    border-radius: 8px;
+}
+.user{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 52px;
+    width: 52px;
+    border-radius: 8px;        
+}
+.main_infor{
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    height: 100%;
     border-radius: 10px;
 }
-
-.profile {
-    gap: 32px;
-    display: flex;
-    flex-direction: column;
-}
-
-.profile_img {
-    width: 100%;
+.infor_header{
     height: 100px;
-    object-fit: cover;
+    width: 100%;
+    border-radius: 8px; 
 }
-
-.profile_text {
-    padding: 32px;
+.infor_text{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    padding: 32px 32px;
 }
-
-.profile_name {
+.name{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 16px;
+    justify-content: space-between;
+    height: 100px;
 }
-
-.profile_name_user {
+.name_box{
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 24px;
+    height: 100px;    
 }
-
-.text_box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 6px;
+.name_text{
+    font-style: medium;
+    font-weight: 500;
+    font-size: 20px;
+    color: #000000;
 }
-
-.profile_name_text_small {
-    font-size: 16px;
+.name_text small{
+    font-style: Regular;
     font-weight: 400;
+    font-size: 16px;
     color: #000000;
     opacity: 0.5;
 }
-
-.profile_name_edit {
+.edit_box{
+    background-color: #4182F9;
+    color: #FFFFFF;
+    border-radius: 8px;
+    font-style: Regular;
+    font-weight: 400;
+    font-size: 16px;
+    height: 44px;
+    width: 93px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4182f9;
-    border-radius: 8px;
-    width: 93px;
-    height: 44px;
-    color: #ffffff;
-    border: none;
-    font-size: 16px;
-    font-weight: 400;
-    cursor: pointer;
 }
-
-.profile_infor {
+.infor_form{
     display: flex;
     flex-direction: row;
     gap: 32px;
+    padding-top: 30px;
 }
-
-.form_right,
-.form_left {
+.form_right, .form_left{
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 25px;
     width: 50%;
 }
-
 label {
     font-size: 16px;
     font-weight: 400;
     color: #000000;
     opacity: 80%;
 }
-
+.form-input{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: flex-start;
+}
 .input-box {
     display: flex;
     flex-direction: row;
@@ -193,66 +199,59 @@ label {
     height: 52px;
     border-radius: 8px;
     box-sizing: border-box;
+    height: 52px;
+    width: 100%;
 }
 
 .input-box img {
     width: 24px;
     height: 24px;
 }
-
-.email_address {
-    font-size: 18px;
-    font-weight: 500;
+.main_email{
     display: flex;
     flex-direction: column;
     gap: 26px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+    font-style: medium;
+    padding-top: 32px;
 }
-
-.email_address_email {
+.email_box{
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    align-items: center;
+    gap: 20px;
 }
-
-.email_address_email img {
+.email_text{
+    font-style: Regular;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+}
+.email_text small{
+    font-style: Regular;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    opacity: 0.5;
+}
+.email_box img{
     width: 48px;
     height: 48px;
 }
-
-.email_address_change {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 209px;
+.add_box{
+    background-color: #F0F4FF; 
+    color: #4182F9;            
+    border: none;              
+    border-radius: 8px; 
+    display: flex;      
     height: 44px;
-    font-size: 16px;
-    font-weight: 400;
-    border-radius: 8px;
-    box-sizing: border-box;
-    border: 0;
-    background-color: hsla(219, 94%, 62%, 0.1);
-    color: #4182f9;
-    cursor: pointer;
-}
-
-.nagvigation {
-    display: flex;
-    flex-direction: column;
-    gap: 47px;
-}
-
-.icons {
-    height: 58px;
-    display: flex;
+    width: 209px;
+    align-items: center;   
     justify-content: center;
-    align-items: center;
-}
-
-.icons .blue {
-    background: linear-gradient(270deg, #d8e6ff -30%, #edf3ff 100%);
-}
-
-.icons img {
-    width: 24px;
-    height: 24px;
+    font-weight: 400;
+    font-size: 16px;
 }
